N°3959 - Fix vertical tabs inner alignment

--- a/css/backoffice/layout/blocks-integrations/_object-details-with-tab-container.scss
+++ b/css/backoffice/layout/blocks-integrations/_object-details-with-tab-container.scss
@@ -6,7 +6,8 @@
 // Note: We use the child ">" selector to ensure this applies only the child tab container, not another one that would be nested
 .ibo-object-details.ibo-has-medallion-icon {
   > .ibo-panel--body {
-    > .ibo-tab-container {
+    // Only for horizontal tabs
+    > .ibo-tab-container:not(.ibo-is-vertical) {
       > .ibo-tab-container--tabs-list {
         // Align tab toggler's title with the panel's title
         padding-left: calc(#{$ibo-object-details--icon--spacing--as-medallion} + #{$ibo-object-details--icon--size} + #{$ibo-object-details--icon--spacing--as-medallion} - #{$ibo-tab-container--tab-toggler--padding-x});
